[package]
name = "treasury_vault"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

anchor-spl = "0.31.1"

bumpalo = "=3.14.0"


[dev-dependencies]
solana-sdk = "=2.3.1"
solana-program-test = "=2.3.3"
